Завершение для List и Set